# halleytest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets_src/config/gameplay/: celestial_bodies.yaml  ships.yaml  weapons.yaml
assets_src/config/stages/: game_stage.yaml
assets_src/spritesheet/: lasers.json
assets_unpacked/: assets.db  import.db
assets_unpacked/pc/animation/: halley_-_halley__icon__dist  halley_-_halley__logo__dist  halley__ui_-_ui__button  halley__ui_-_ui__caret  halley__ui_-_ui__checkbox  halley__ui_-_ui__checkbox__checked  halley__ui_-_ui__dropdown__closed  halley__ui_-_ui__dropdown__open  halley__ui_-_ui__dropdown__window  halley__ui_-_ui__input  halley__ui_-_ui__list__item  halley__ui_-_ui__scrollbar  halley__ui_-_ui__window  whitebox  whitebox__outline
assets_unpacked/pc/configFile/: ui_-_halley_-_debug__console  ui__style_-_halley
assets_unpacked/pc/font/: Ubuntu Bold
assets_unpacked/pc/materialDefinition/: Halley_-_DistanceFieldSprite  Halley_-_LineBase  Halley_-_NV12Video  Halley_-_Scanlines  Halley_-_SolidColour  Halley_-_SolidColourOpaque  Halley_-_SolidLine  Halley_-_Sprite  Halley_-_SpriteAdd  Halley_-_SpriteAlpha  Halley_-_SpriteMultiply  Halley_-_SpriteOpaque  Halley_-_StandardMesh  Halley_-_Text  Halley_-_UntransformedSolidColour
assets_unpacked/pc/shader/: Halley_-_DistanceFieldSprite__pass__0_c_glsl  Halley_-_DistanceFieldSprite__pass__0_c_metal  Halley_-_NV12Video__pass__0_c_glsl  Halley_-_NV12Video__pass__0_c_metal  Halley_-_Scanlines__pass__0_c_glsl  Halley_-_Scanlines__pass__0_c_metal  Halley_-_SolidColourOpaque__pass__0_c_metal  Halley_-_SolidColour__pass__0_c_glsl  Halley_-_SolidLine__pass__0_c_glsl  Halley_-_SolidLine__pass__0_c_metal  Halley_-_SpriteAlpha__pass__0_c_metal  Halley_-_SpriteMultiply__pass__0_c_glsl  Halley_-_Text__pass__0_c_glsl  Halley_-_Text__pass__0_c_metal  Halley_-_Text__pass__1_c_glsl  Halley_-_Text__pass__1_c_metal  Halley_-_UntransformedSolidColour__pass__0_c_glsl  Halley_-_UntransformedSolidColour__pass__0_c_metal
assets_unpacked/pc/spriteSheet/: halley_-_halley__icon__dist  halley_-_halley__logo__dist  halley__ui_-_ui__button  halley__ui_-_ui__caret  halley__ui_-_ui__checkbox  halley__ui_-_ui__checkbox__checked  halley__ui_-_ui__dropdown__closed  halley__ui_-_ui__dropdown__open  halley__ui_-_ui__dropdown__window  halley__ui_-_ui__input  halley__ui_-_ui__list__item  halley__ui_-_ui__scrollbar  halley__ui_-_ui__window  whitebox  whitebox__outline
assets_unpacked/pc/texture/: fontTex_-_Ubuntu Bold
gen_src/: camera.yaml  control.yaml  detection.yaml  environment.yaml  physics.yaml  services.yaml  sprite.yaml  stats.yaml  team.yaml  weapons.yaml
lib/: CMakeLists.txt
src/: game.cpp  game.h  game_stage.cpp  game_stage.h  hardpoint.h  title_stage.cpp  utils.cpp  utils.h
src/config/: asteroid_config.cpp  asteroid_config.h  hardpoint.h  ship_config.cpp  ship_config.h  weapon_config.cpp  weapon_config.h
src/control/: action.h  actor.cpp  actor.h  actor.pt  actor.py  controller.cpp  controller.h  critic.pt  critic.py  feedforward.pt  feedforward.py  learner.cpp  learner.h  mdp.cpp  mdp.h  observation.cpp  observation.h  policy.cpp  policy.h  replay_buffer.cpp  replay_buffer.h  trainer.cpp  trainer.h  trajbatch.cpp  trajbatch.h
src/control/actorcritic/: acactor.cpp  acactor.h  actor.pt  actor.py  actrainer.cpp  actrainer.h  critic.pt  trainer.cpp  trainer.h
src/control/distributions/: bernoulli.cpp  bernoulli.h  distribution.cpp  distribution.h  normal.cpp  normal.h
src/control/dqn/: dqn.cpp  dqn.h  dqn_actor.cpp  dqn_actor.h  dqn_trainer.cpp  dqn_trainer.h
src/control/sac/: ReplayBuffer.cpp  ReplayBuffer.h  SACActor.cpp  SACActor.h  actor.py  critic.py  discrete_actor.py  discrete_critic.py  replay_buffer.cpp  replay_buffer.h  sac_actor.cpp  sac_actor.h  sac_trainer.cpp  sac_trainer.h  sacactor.cpp  sacactor.h
src/control/sac_script/: discrete_actor.py  discrete_critic.py  gaussian_actor.py  sac_trainer_script.cpp  sac_trainer_script.h  sacactor.cpp  sacactor.h
src/services/: asteroid_service.cpp  asteroid_service.h  controller_service.cpp  controller_service.h  input_service.cpp  ship_service.cpp  ship_service.h
src/systems/: DetectionSystem.cpp  agent_control_system.cpp  asteroid_system.cpp  camera_render_system.cpp  control_system.cpp  defensive_stat_system.cpp  device_control_system.cpp  physics_system.cpp  projectile_system.cpp  ship_system.cpp  sprite_render_system.cpp  team_system.cpp  weapon_control_system.cpp
